<resources>
    <string name="app_name">SmartRoom</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm Password</string>
    <string name="full_name">Full name</string>
    <string name="birthday">Birthday</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="back_to">Back to</string>
    <string name="not_have">Haven"'t an account yet?</string>

    <!--Register Fragment-->
    <string name="format_dob">ddMMyyyy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
