<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#0D0124"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtUsername"
                    android:hint="@string/username"
                    android:textColor="@android:color/white"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:background="@drawable/boder_login"
                    android:textColorHint="@android:color/white"
                    android:padding="10dp"
                    android:layout_marginBottom="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/edtPassword"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:padding="10dp"
                    android:layout_marginBottom="20dp"
                    android:imeOptions="actionNext"
                    android:background="@drawable/boder_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/edtConfirmPassword"
                    android:hint="@string/confirm"
                    android:textColor="@android:color/white"
                    android:inputType="textPassword"
                    android:imeOptions="actionNext"
                    android:background="@drawable/boder_login"
                    android:textColorHint="@android:color/white"
                    android:padding="10dp"
                    android:layout_marginBottom="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/edtFullName"
                    android:hint="@string/full_name"
                    android:inputType="text"
                    android:textColor="@android:color/white"
                    android:imeOptions="actionNext"
                    android:background="@drawable/boder_login"
                    android:textColorHint="@android:color/white"
                    android:padding="10dp"
                    android:layout_marginBottom="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/edtBirthday"
                    android:inputType="date"
                    android:hint="@string/birthday"
                    android:textColor="@android:color/white"
                    android:imeOptions="actionNext"
                    android:background="@drawable/boder_login"
                    android:textColorHint="@android:color/white"
                    android:padding="10dp"
                    android:layout_marginBottom="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/edtEmail"
                    android:hint="@string/email"
                    android:textColor="@android:color/white"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext"
                    android:background="@drawable/boder_login"
                    android:textColorHint="@android:color/white"
                    android:padding="10dp"
                    android:layout_marginBottom="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/edtPhone"
                    android:inputType="number"
                    android:textColor="@android:color/white"
                    android:hint="@string/phone"
                    android:imeOptions="actionDone"
                    android:background="@drawable/boder_login"
                    android:textColorHint="@android:color/white"
                    android:padding="10dp"
                    android:layout_marginBottom="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_marginTop="20dp"
                    android:text="@string/register"
                    android:textColor="@android:color/white"
                    android:background="@drawable/boder_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tvBackTo"
                        android:text="@string/back_to"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/tvLogin"
                        android:text="@string/login"
                        android:textColor="#2196F3"
                        android:textSize="18sp"
                        android:layout_marginStart="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>


</FrameLayout>