<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/gradient_bg"
    android:layout_height="match_parent">



    <RelativeLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tvLabel"
                    android:text="@string/app_name"
                    android:textSize="30dp"
                    android:layout_marginBottom="30dp"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/edtUsername"
                    android:hint="@string/username"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:textColor="@android:color/white"
                    android:background="@drawable/boder_login"
                    android:textColorHint="@android:color/white"
                    android:padding="10dp"
                    android:layout_marginBottom="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/edtPassword"
                    android:hint="@string/password"
                    android:textColor="@android:color/white"
                    android:inputType="textPassword"
                    android:textColorHint="@android:color/white"
                    android:padding="10dp"
                    android:imeOptions="actionDone"
                    android:background="@drawable/boder_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_marginTop="20dp"
                    android:text="@string/login"
                    android:textColor="@android:color/white"
                    android:background="@drawable/boder_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tvDoNotHaveAccount"
                        android:text="@string/not_have"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/tvCreateAccount"
                        android:text="Create one"
                        android:textColor="#2196F3"
                        android:textSize="18sp"
                        android:layout_marginStart="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>



</FrameLayout>